# JavaScriptCore-Android

./: .gitignore  README.md
jni/: Android_jsc.mk
jni/Source/JavaScriptCore/: Android.mk  GNUmakefile  GNUmakefile.list.am  config.h  config.status  configure  configure.ac
jni/Source/JavaScriptCore/JavaScriptCore.vcxproj/: JavaScriptCore.submit.sln
